# give-me-money

./: .gitignore  README.md  main.py  pyproject.toml
src/client/: factory.py  groww.py  interfaces.py
src/pubsub/: interfaces.py  publisher.py
src/strategies/: max_oi.py
tests/: test_factory.py  test_integration.py  test_pubsub.py  test_strategy.py
